<resources>
    <string name="app_name">MMSPlayer</string>

    <string name="network_no_connect">网络尚未连接，请检查您的网络状态</string>


    <string name="main_simple_view">基础播放器界面</string>
    <string name="main_widget_view">带控件播放器</string>
    <string name="main_half_view">半屏播放</string>
    <string name="main_develop">开发中</string>

    <string name="simple_prepared">加载完毕</string>
    <string name="simple_buffering_start">开始缓冲</string>
    <string name="simple_buffering_end">缓冲结束</string>
    <string name="simple_completion">播放结束</string>
    <string name="simple_error">异常：%s</string>

    <string name="video_parameter_error">播放参数异常，请稍后再试</string>
    <string name="video_play_progress">%1$s / %2$s</string>
    <string name="video_loading_player_init_complete">初始化播放器… 【完成】</string>
    <string name="video_loading_player_view_complete">初始化播放组件… 【完成】</string>
    <string name="video_loading_load_url_complete">加载视频地址… 【完成】</string>
    <string name="video_loading_start_analysis_url">开始解析视频地址…</string>
    <string name="video_loading_analysis_url_complete">解析视频地址… 【完成】</string>
    <string name="video_loading_start_change_quality">正在为您切换画质…</string>
    <string name="video_retry">点击重试</string>
    <string name="video_analysis_error_tips">视频解析出现异常…</string>
    <string name="video_phone_data_tips">正在使用非WIFI网络，播放将产生流量费用</string>
    <string name="video_data_play">流量播放</string>
    <string name="video_network_type_offline">网络断开</string>
    <string name="video_network_type_unknown">未知网络</string>
    <string name="video_network_type_wifi">Wifi</string>
    <string name="video_network_type_2g">2G</string>
    <string name="video_network_type_3g">3G</string>
    <string name="video_network_type_4g">4G</string>

    <string name="info_name">深圳市绿色低碳科技促进会</string>
    <string name="info_content">\t\t\t\t深圳市绿色低碳科技促进会（以下简称协会）是积极响应国家建设资源节约型、环境友好型社会，响应深圳市政府提出的在全国率先建设绿色低碳科技新城市，促进深圳经济可持续发展的号召，于二零一一年六月十四日成立的经深圳市民政局注册、登记的具有法人资格的、行业性、地方性的行业协会，主要由深圳低碳节能环保相关企业、事业单位、社会组织及个人自愿参加。协会现有会员企业100多家，是深圳一家较新的充满生命力的不以盈利为目的的公益性组织。</string>
    <string name="info_overview_title">协会概况</string>
    <string name="info_overview">\t\t\t\t协会自成立伊始就致力于促进深圳市绿色经济可持续发展，推动低碳技术创新，走绿色低碳发展道路。协会除了业务范围内的工作，还与深圳环保局、深圳市经济贸易和信息化委员会、南山区政府、福田区政府等都有重大项目合作，不是只简单的服务企业，而是真正的帮助企业提升、进步，从而促进深圳市更好的发展绿色低碳经济。</string>
    <string name="info_purpose_title">协会宗旨</string>
    <string name="info_purpose">\t\t\t\t遵守宪法、法律、法规和国家政策。遵守社会道德规范，维护国家根本利益，认真贯彻执行国家和深圳市鼓励绿色低碳发展的若干政策，通过为政府有关部门和会员服务，充分发挥促进会作为政府与企业之间的桥梁与纽带作用，达到促进深圳可再生能源持续发展的目的。</string>

    <string name="dialog_setting_title">播放器设置</string>
    <string name="dialog_setting_un_next">不连播</string>
    <string name="dialog_setting_auto_next">自动连播</string>
    <string name="dialog_setting_single_cycle">单集循环</string>
    <string name="dialog_setting_exit_end">播完退出全屏</string>
    <string name="dialog_setting_aspect_ratio_default">默认</string>
    <string name="dialog_setting_aspect_ratio_full">全屏</string>
    <string name="dialog_setting_aspect_ratio_16_9">16：9</string>
    <string name="dialog_setting_aspect_ratio_4_3">4：3</string>
    <string name="dialog_setting_speed_title">倍数</string>
    <string name="dialog_setting_speed_05">0.5X</string>
    <string name="dialog_setting_speed_075">0.75X</string>
    <string name="dialog_setting_speed_10">1.0X</string>
    <string name="dialog_setting_speed_125">1.25X</string>
    <string name="dialog_setting_speed_15">1.5X</string>
    <string name="dialog_setting_speed_20">2.0X</string>


</resources>
