<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_video_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_analysis_error_tips"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/retry_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/selector_bg_video_btn"
            android:paddingStart="18dp"
            android:paddingTop="4dp"
            android:paddingEnd="18dp"
            android:paddingBottom="4dp"
            android:text="@string/video_retry"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:padding="20dp"
        android:src="@drawable/component_selector_btn_back" />

</FrameLayout>